--- a/style/style.css
+++ b/style/style.css
@@ -69,6 +69,10 @@ span {
   margin: 0;
 }
 
+body {
+  font-family: "Century Gothic", "Lato", sans-serif;
+}
+
 a {
   text-decoration: none;
 }
@@ -123,7 +127,7 @@ header {
 }
 .et-hero-tab:hover {
   color: white;
-  background: rgba(102, 177, 241, 0.8);
+  background: black;
   transition: all 0.5s ease;
 }
 
@@ -132,12 +136,47 @@ header {
   bottom: 0;
   width: 0;
   height: 6px;
-  background: #66b1f1;
+  background: black;
   transition: left 0.3s ease;
+}
+
+h1 {
+  font-size: 2rem;
+  margin: 0;
+  letter-spacing: 1rem;
+  padding-bottom: 1em;
+}
+
+h2 {
+  font-size: 1.5rem;
+  letter-spacing: 0.3rem;
+  opacity: 0.6;
 }
 
 #tab-about {
   background-color: #66b1f1;
+}
+
+@media screen and (max-width: 576px) {
+  h1 {
+    font-size: large;
+  }
+
+  h2 {
+    font-size: medium;
+  }
+}
+h3 {
+  font-size: 1.5em;
+  margin: 0;
+  letter-spacing: 1rem;
+  padding-bottom: 1em;
+}
+
+@media screen and (max-width: 576px) {
+  h3 {
+    font-size: 1em;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
