--- a/style/style.css
+++ b/style/style.css
@@ -145,16 +145,13 @@ h1 {
   margin: 0;
   letter-spacing: 1rem;
   padding-bottom: 1em;
+  opacity: 0.6;
 }
 
 h2 {
   font-size: 1.5rem;
   letter-spacing: 0.3rem;
   opacity: 0.6;
-}
-
-#tab-about {
-  background-color: #66b1f1;
 }
 
 @media screen and (max-width: 576px) {
@@ -174,14 +171,13 @@ h3 {
 }
 
 #tab-portfolio {
-  background-color: lightgray;
+  background-color: #f1f1f1;
 }
 
-@media screen and (max-width: 576px) {
-  h3 {
-    font-size: 1em;
-  }
+#tab-about {
+  background-color: #f1f1f1;
 }
+
 .demo-gallery > ul {
   margin-bottom: 0;
   padding-left: 15px;
@@ -190,7 +186,7 @@ h3 {
 
 .demo-gallery > ul > li {
   margin-bottom: 15px;
-  width: 180px;
+  width: 350px;
   display: inline-block;
   margin-right: 15px;
   list-style: outside none none;
@@ -311,6 +307,181 @@ h3 {
 
 .demo-gallery.dark > ul > li a {
   border: 3px solid #04070a;
+}
+
+@media screen and (max-width: 576px) {
+  h3 {
+    font-size: 1em;
+  }
+
+  .demo-gallery > ul > li {
+    width: 320px;
+  }
+}
+.wrapper {
+  width: 715px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+}
+
+.wrapper header {
+  font-size: 22px;
+  font-weight: 600;
+  padding: 20px 30px;
+  border-bottom: 1px solid #ccc;
+}
+
+.wrapper form {
+  margin: 35px 30px;
+}
+
+.wrapper form.disabled {
+  pointer-events: none;
+  opacity: 0.7;
+}
+
+form .dbl-field {
+  display: flex;
+  margin-bottom: 25px;
+  justify-content: space-between;
+}
+
+.dbl-field .field {
+  height: 50px;
+  display: flex;
+  position: relative;
+  width: calc(100% / 2 - 13px);
+}
+
+.wrapper form i {
+  position: absolute;
+  top: 50%;
+  left: 18px;
+  color: #ccc;
+  font-size: 17px;
+  pointer-events: none;
+  transform: translateY(-50%);
+}
+
+form .field input,
+form .message textarea {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  padding: 0 18px 0 48px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.field input::placeholder,
+.message textarea::placeholder {
+  color: #ccc;
+}
+
+.field input:focus,
+.message textarea:focus {
+  padding-left: 47px;
+  border: 2px solid #0D6EFD;
+}
+
+.field input:focus ~ i,
+.message textarea:focus ~ i {
+  color: #0D6EFD;
+}
+
+form .message {
+  position: relative;
+}
+
+form .message i {
+  top: 30px;
+  font-size: 20px;
+}
+
+form .message textarea {
+  min-height: 130px;
+  max-height: 230px;
+  max-width: 100%;
+  min-width: 100%;
+  padding: 15px 20px 0 48px;
+}
+
+form .message textarea::-webkit-scrollbar {
+  width: 0px;
+}
+
+.message textarea:focus {
+  padding-top: 14px;
+}
+
+form .button-area {
+  margin: 25px 0;
+  display: flex;
+  align-items: center;
+}
+
+.button-area button {
+  color: #fff;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 13px 25px;
+  background: #0D6EFD;
+}
+
+.button-area button:hover {
+  background: #025ce3;
+}
+
+.button-area span {
+  font-size: 17px;
+  margin-left: 30px;
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .wrapper header {
+    text-align: center;
+  }
+
+  .wrapper form {
+    margin: 35px 20px;
+  }
+
+  form .dbl-field {
+    flex-direction: column;
+    margin-bottom: 0px;
+  }
+
+  form .dbl-field .field {
+    width: 100%;
+    height: 45px;
+    margin-bottom: 20px;
+  }
+
+  form .message textarea {
+    resize: none;
+  }
+
+  form .button-area {
+    margin-top: 20px;
+    flex-direction: column;
+  }
+
+  .button-area button {
+    width: 100%;
+    padding: 11px 0;
+    font-size: 16px;
+  }
+
+  .button-area span {
+    margin: 20px 0 0;
+    text-align: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
