--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -1,6 +1,7 @@
 
 .wrapper{
-    width: 715px;
+    width: 100%;
+   
     background: #fff;
     border-radius: 5px;
     box-shadow: 10px 10px 10px rgba(0,0,0,0.05);
@@ -105,7 +106,7 @@
     margin-left: 30px;
     display: none;
   }
-  @media (max-width: 600px){
+  @media (max-width: 768px){
     .wrapper header{
       text-align: center;
     }
