Mise en place des skills partie desktop

--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -13,6 +13,10 @@ h3 {
   background-color: #f1f1f1;
 }
 
+footer{
+    background-color: rgb(28, 31, 30);
+}
+
 .demo-gallery > ul {
   margin-bottom: 0;
   padding-left: 15px;
