--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -26,10 +26,14 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  // height: 100vh;
   position: relative;
   text-align: center;
   padding: 0 2em;
+}
+
+#tab-contact {
+  height: 100vh;
 }
 
 .et-hero-tabs-container {
@@ -93,5 +97,12 @@ h2 {
   }
   h2 {
     font-size: medium;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  #tab-about,
+  #tab-portfolio {
+    height: 100vh;
   }
 }
