--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -7,7 +7,7 @@ ul {
   justify-content: center;
   align-items: center;
   margin: 0;
-  padding:5em;
+  // padding:5em;
   li {
     position: relative;
   }
@@ -29,7 +29,7 @@ ul {
     stroke: black;
     stroke-linecap: round;
   }
-  
+
   span,
   small {
     position: absolute;
@@ -43,8 +43,16 @@ ul {
     top: 40%;
     border: none;
   }
-
 }
+
+// @media screen and (min-width: 576px) {
+// ul{
+//   svg{
+//     width:60%;
+//   }
+// }
+// }
+
 // clear: both;
 // padding: 15px;
 // text-align: center;
@@ -55,4 +63,3 @@ ul {
 // //   flex-wrap: wrap;
 // //   list-style: none;
 // }
-
