couleur de fonds des différentes sections

--- a/style/style.css
+++ b/style/style.css
@@ -184,11 +184,7 @@ h3 {
 }
 
 #tab-about {
-  background-color: #f1f1f1;
-}
-
-footer {
-  background-color: #1c1f1e;
+  background-color: #fff;
 }
 
 .demo-gallery > ul {
