--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -10,11 +10,7 @@ h3 {
 }
 
 #tab-about {
-  background-color: #f1f1f1;
-}
-
-footer{
-    background-color: rgb(28, 31, 30);
+  background-color: #fff;
 }
 
 .demo-gallery > ul {
