--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,6 +6,21 @@
 
 body {
   font-family: "Century Gothic", "Lato", sans-serif;
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
+}
+
+html {
+  height: -webkit-fill-available;
+}
+
+/* Avoid Chrome to see Safari hack */
+@supports (-webkit-touch-callout: none) {
+  body {
+    /* The hack for Safari */
+    min-height: -webkit-fill-available;
+  }
 }
 
 a {
