--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -147,8 +147,10 @@ h3 {
   h3 {
     font-size: 1em;
   }
-
   .demo-gallery > ul > li {
     width: 300px;
+  }
+  h3 {
+    margin-top: 2em;
   }
 }
