--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -10,6 +10,9 @@ h3 {
 
 #tab-about {
   background-color: #fff;
+  p {
+    padding: 2em;
+  }
 }
 
 .demo-gallery > ul {
@@ -150,6 +153,15 @@ h3 {
   .demo-gallery > ul > li {
     width: 300px;
   }
+}
+
+@media screen and (min-width: 768px) {
+  p {
+    font-size: 1.5em;
+  }
+}
+
+@media screen and (max-width: 768px) {
   h3 {
     margin-top: 2em;
   }
