Ajustement de la partie portfolio

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
-
 @import "button.scss";
 @import "header.scss";
 @import "section.scss";
 @import "skills.scss";
+@import "portfolio.scss";
 @import "form.scss";
