--- a/style/style.css
+++ b/style/style.css
@@ -201,137 +201,6 @@ h3 {
   padding: 2em;
 }
 
-.demo-gallery > ul {
-  margin-bottom: 0;
-  padding-left: 15px;
-  padding: 0;
-}
-
-.demo-gallery > ul > li {
-  margin-bottom: 15px;
-  width: 350px;
-  display: inline-block;
-  margin-right: 15px;
-  list-style: outside none none;
-}
-
-.demo-gallery > ul > li a {
-  border: 3px solid #fff;
-  border-radius: 3px;
-  display: block;
-  overflow: hidden;
-  position: relative;
-  float: left;
-}
-
-.demo-gallery > ul > li a > img {
-  -webkit-transition: -webkit-transform 0.15s ease 0s;
-  -moz-transition: -moz-transform 0.15s ease 0s;
-  -o-transition: -o-transform 0.15s ease 0s;
-  transition: transform 0.15s ease 0s;
-  -webkit-transform: scale3d(1, 1, 1);
-  transform: scale3d(1, 1, 1);
-  height: 100%;
-  width: 100%;
-}
-
-.demo-gallery > ul > li a:hover > img {
-  -webkit-transform: scale3d(1.1, 1.1, 1.1);
-  transform: scale3d(1.1, 1.1, 1.1);
-}
-
-.demo-gallery > ul > li a:hover .demo-gallery-poster > img {
-  opacity: 1;
-}
-
-.demo-gallery > ul > li a .demo-gallery-poster {
-  background-color: rgba(0, 0, 0, 0.1);
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  -webkit-transition: background-color 0.15s ease 0s;
-  -o-transition: background-color 0.15s ease 0s;
-  transition: background-color 0.15s ease 0s;
-}
-
-.demo-gallery > ul > li a .demo-gallery-poster > img {
-  left: 50%;
-  margin-left: -10px;
-  margin-top: -10px;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  -webkit-transition: opacity 0.3s ease 0s;
-  -o-transition: opacity 0.3s ease 0s;
-  transition: opacity 0.3s ease 0s;
-}
-
-.demo-gallery > ul > li a:hover .demo-gallery-poster {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.demo-gallery .justified-gallery > a > img {
-  -webkit-transition: -webkit-transform 0.15s ease 0s;
-  -moz-transition: -moz-transform 0.15s ease 0s;
-  -o-transition: -o-transform 0.15s ease 0s;
-  transition: transform 0.15s ease 0s;
-  -webkit-transform: scale3d(1, 1, 1);
-  transform: scale3d(1, 1, 1);
-  height: 100%;
-  width: 100%;
-}
-
-.demo-gallery .justified-gallery > a:hover > img {
-  -webkit-transform: scale3d(1.1, 1.1, 1.1);
-  transform: scale3d(1.1, 1.1, 1.1);
-}
-
-.demo-gallery .justified-gallery > a:hover .demo-gallery-poster > img {
-  opacity: 1;
-}
-
-.demo-gallery .justified-gallery > a .demo-gallery-poster {
-  background-color: rgba(0, 0, 0, 0.1);
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  -webkit-transition: background-color 0.15s ease 0s;
-  -o-transition: background-color 0.15s ease 0s;
-  transition: background-color 0.15s ease 0s;
-}
-
-.demo-gallery .justified-gallery > a .demo-gallery-poster > img {
-  left: 50%;
-  margin-left: -10px;
-  margin-top: -10px;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  -webkit-transition: opacity 0.3s ease 0s;
-  -o-transition: opacity 0.3s ease 0s;
-  transition: opacity 0.3s ease 0s;
-}
-
-.demo-gallery .justified-gallery > a:hover .demo-gallery-poster {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.demo-gallery .video .demo-gallery-poster img {
-  height: 48px;
-  margin-left: -24px;
-  margin-top: -24px;
-  opacity: 0.8;
-  width: 48px;
-}
-
-.demo-gallery.dark > ul > li a {
-  border: 3px solid #04070a;
-}
-
 @media screen and (max-width: 576px) {
   h3 {
     font-size: 1em;
@@ -346,12 +215,12 @@ h3 {
     font-size: 1.5em;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   h3 {
     margin-top: 2em;
   }
 }
-ul {
+.skills-display {
   list-style: none;
   text-align: center;
   padding: 0;
@@ -361,29 +230,29 @@ ul {
   align-items: center;
   margin: 0;
 }
-ul li {
+.skills-display li {
   position: relative;
 }
-ul li:hover svg {
+.skills-display li:hover svg {
   stroke: black;
   stroke-width: 4px;
 }
-ul svg {
+.skills-display svg {
   width: 65%;
   fill: transparent;
   transform: rotate(-90deg);
 }
-ul circle {
+.skills-display circle {
   stroke-width: 1px;
   stroke: lightgrey;
 }
-ul .cbar {
+.skills-display .cbar {
   stroke-width: 3px;
   stroke: black;
   stroke-linecap: round;
 }
-ul span,
-ul small {
+.skills-display span,
+.skills-display small {
   position: absolute;
   display: block;
   width: 100%;
@@ -391,11 +260,29 @@ ul small {
   transition-duration: 0.3s;
   color: black;
 }
-ul span {
+.skills-display span {
   top: 40%;
   border: none;
 }
 
+img {
+  width: 25em;
+  padding: 1em;
+  object-fit: cover;
+}
+
+.portfolio-display {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 576px) {
+  img {
+    width: 20em;
+  }
+}
 .wrapper {
   width: 100%;
   background: #fff;
