--- a/style/style.css
+++ b/style/style.css
@@ -265,12 +265,6 @@ h3 {
   border: none;
 }
 
-img {
-  width: 25em;
-  padding: 1em;
-  object-fit: cover;
-}
-
 .portfolio-display {
   list-style: none;
   display: flex;
@@ -278,11 +272,79 @@ img {
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 576px) {
-  img {
-    width: 20em;
-  }
+.container {
+  position: relative;
+  margin-top: 50px;
+  width: 500px;
+  height: 300px;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  transition: background 0.5s ease;
+}
+
+.container:hover .overlay {
+  display: block;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+img {
+  position: absolute;
+  width: 500px;
+  height: 300px;
+  left: 0;
+  object-fit: cover;
+}
+
+.title {
+  position: absolute;
+  width: 500px;
+  left: 0;
+  top: 120px;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  z-index: 1;
+  transition: top 0.5s ease;
+  opacity: 0;
+}
+
+.container:hover .title {
+  top: 90px;
+  opacity: 1;
+}
+
+.button {
+  position: absolute;
+  width: 500px;
+  left: 0;
+  top: 180px;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.35s ease;
+}
+
+.button a {
+  width: 200px;
+  padding: 12px 48px;
+  text-align: center;
+  color: white;
+  border: solid 2px white;
+  z-index: 1;
+}
+
+.container:hover .button {
+  opacity: 1;
+}
+
 .wrapper {
   width: 100%;
   background: #fff;
