--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -1,23 +1,24 @@
 .portfolio-display {
   list-style: none;
   display: flex;
-  justify-content: space-around;
+    justify-content: space-around;
   flex-wrap: wrap;
+ li{
+    padding:15px;
+ }
 }
 
 .container {
   position: relative;
   margin-top: 50px;
-  //   width: 500px;
-  //   height: 300px;
   width: 320px;
   height: 200px;
 }
 
 .overlay {
   position: absolute;
-  top: 0;
-  left: 0;
+//   top: 0;
+//   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0);
@@ -31,8 +32,6 @@
 
 img {
   position: absolute;
-  //   width: 500px;
-  //   height: 300px;
   width: 320px;
   height: 200px;
   left: 0;
