--- a/style/style.css
+++ b/style/style.css
@@ -271,6 +271,9 @@ h3 {
   justify-content: space-around;
   flex-wrap: wrap;
 }
+.portfolio-display li {
+  padding: 15px;
+}
 
 .container {
   position: relative;
@@ -281,8 +284,6 @@ h3 {
 
 .overlay {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0);
