--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -7,32 +7,32 @@ footer {
   padding: 20px;
   h1,
   i,
-  a,p {
+  a,
+  p {
     color: white;
     opacity: 0.5;
     font-size: medium;
-    margin-right:5px;
+    margin-right: 5px;
   }
   a {
     text-decoration: none;
   }
-  .mail{
-    margin-bottom:5px;
+  .mail {
+    margin-bottom: 5px;
   }
-  .disclaim{
+  .disclaim {
     font-style: italic;
-    margin-top:10px;
+    margin-top: 10px;
     text-align: center;
-    margin-top:20px;
+    margin-top: 20px;
   }
 }
 
 @media screen and (max-width: 576px) {
-   footer{
-    h1{
-        font-size: small;
-        letter-spacing: 0.7rem;
+  footer {
+    h1 {
+      font-size: small;
+      letter-spacing: 0.7rem;
     }
-   }
   }
-  
+}
